# ai-workflow-automator

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DELIVERY_REPORT.md  LICENSE  PROJECT_SUMMARY.md  QUICK_START.md  README.md  __main__.py  config.example.yaml  config.yaml  main.py  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
docs/: ARCHITECTURE.md  GETTING_STARTED.md
examples/: README.md  example1_basic_pipeline.py  example2_scan_only.py  quickstart.py
examples/sample_project/: bad_module.py  good_module.py
src/: __init__.py  pipeline.py
src/agents/: __init__.py  doc_agent.py  refactor_agent.py  scan_agent.py  test_agent.py
src/core/: __init__.py  base_agent.py  models.py
src/utils/: __init__.py  llm_clients.py
tests/: __init__.py  conftest.py  test_doc_agent.py  test_refactor_agent.py  test_scan_agent.py  test_test_agent.py
